# Full-Stack-ToDo-application2

./: IMPLEMENTATION_SUMMARY.md  README.md  main.py  pyproject.toml  test_functionality.py
.specify/memory/: constitution.md
backend/: pyproject.toml
backend/app/: __init__.py  db.py  main.py  models.py  schemas.py  service.py
backend/app/api/: tasks.py
backend/app/console_task_app.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
backend/task_api.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
history/prompts/001-console-task-app/: 0001-update-plan-with-rich-integration.plan.prompt.md  0002-create-tasks-for-rich-ui-overhaul.tasks.prompt.md
history/prompts/002-fullstack-task-app/: 0001-create-fullstack-task-app-spec.spec.prompt.md  0002-create-execution-checklist.tasks.prompt.md  0003-execute-phase-ii.implement.prompt.md
history/prompts/console-task-app/: 001-complete-console-task-app.implement.prompt.md  001-create-console-task-app-plan.plan.prompt.md  001-create-console-task-app-spec.spec.prompt.md  001-create-console-task-app-tasks.tasks.prompt.md  002-update-spec-id-format.spec.prompt.md
history/prompts/constitution/: 0001-update-constitution-fullstack.constitution.prompt.md  (+2 more)
specs/001-console-task-app/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-fullstack-task-app/: plan.md  tasks.md
src/: main.py
src/console_task_app.egg-info/: PKG-INFO  requires.txt  top_level.txt
tests/integration/: test_cli.py
tests/unit/: test_models.py  test_service.py
(+4 files in other folders)
