[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "task-api"
version = "0.1.0"
description = "FastAPI-based task management API"
authors = [{name = "Hackathon Team", email = "team@example.com"}]
readme = "README.md"
requires-python = ">=3.13"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "fastapi>=0.110.0",
    "sqlmodel>=0.0.22",
    "psycopg2-binary>=2.9.0",
    "uvicorn>=0.24.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=22.0.0",
    "flake8>=4.0.0",
    "httpx>=0.24.0",
]

[project.scripts]
taskapi = "app.main:main"